[package]
name = "dive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
csv = "1.3.0"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4"] }
